--- a/src/scss/imports.scss
+++ b/src/scss/imports.scss
@@ -1,1 +1,272 @@
 // @import "loginApp.scss";
+
+// @import "GSAP";
+
+// @import "parallax";
+@import "loading";
+// @import "_menu-opera";
+
+@import "normalize.scss";
+
+body {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.loading-1 {
+  height: 70px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding: 10px;
+  //   border: 1px solid white;
+
+  span {
+    width: 3px;
+    border-radius: 5px;
+    margin: 0 3px;
+    display: inline-block;
+    background-color: white;
+    transition: all 0.5s ease-in-out;
+  }
+}
+
+.loading-1 + .title {
+  color: white;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 0px;
+}
+
+@keyframes load {
+  0% {
+    background-color: rgb(19, 188, 255);
+    height: 0px;
+  }
+  50% {
+    background-color: rgb(101, 29, 235);
+    height: 60px;
+  }
+  100% {
+    height: 0px;
+    background-color: black;
+  }
+}
+
+.loading-1 {
+  .bar-1 {
+    animation: load 1s infinite;
+  }
+
+  .bar-2 {
+    animation: load 1s 0.1s infinite;
+  }
+
+  .bar-3 {
+    animation: load 1s 0.15s infinite;
+  }
+
+  .bar-4 {
+    animation: load 1s 0.2s infinite;
+  }
+
+  .bar-5 {
+    animation: load 1s 0.25s infinite;
+  }
+
+  .bar-6 {
+    animation: load 1s 0.3s infinite;
+  }
+
+  .bar-7 {
+    animation: load 1s 0.35s infinite;
+  }
+
+  .bar-8 {
+    animation: load 1s 0.4s infinite;
+  }
+
+  .bar-9 {
+    animation: load 1s 0.45s infinite;
+  }
+
+  .bar-10 {
+    animation: load 1s 0.5s infinite;
+  }
+}
+
+//------------------------------------------------------------------------------------
+.loading-w {
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+
+  span {
+    display: inline-block;
+    width: 3px;
+    border-radius: 5px;
+    background-color: white;
+    height: 10px;
+    transition: all 0.2s;
+    margin: 0 3px;
+  }
+
+  .bar-1 {
+    max-height: 70px;
+    animation: load-w 1.5s infinite;
+  }
+  .bar-2 {
+    max-height: 70px;
+    animation: load-w 1.5s infinite;
+  }
+  .bar-3 {
+    animation: load-w 1.5s infinite;
+    max-height: 20px;
+  }
+  .bar-4 {
+    animation: load-w 1.5s infinite;
+    max-height: 30px;
+  }
+  .bar-5 {
+    animation: load-w 1.5s infinite;
+    max-height: 20px;
+  }
+  .bar-6 {
+    animation: load-w 1.5s infinite;
+    max-height: 70px;
+  }
+  .bar-7 {
+    animation: load-w 1.5s infinite;
+    max-height: 70px;
+  }
+}
+
+.loading-w + .title {
+  color: white;
+  animation: pisca 1s infinite;
+  margin-top: 5px;
+  font-size: 12px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+@keyframes load-w {
+  0% {
+    height: 0%;
+  }
+  50% {
+    height: 80%;
+    background-color: crimson;
+  }
+  100% {
+    height: 0%;
+  }
+}
+
+@keyframes pisca {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+//------------------------------------------------------------------------------------
+
+.loading-x {
+  .space {
+    width: 50px;
+    height: 75px;
+    position: relative;
+    margin: 50px 0;
+
+    &:before {
+      content: "";
+      width: 50px;
+      height: 32.5px;
+      background-color: white;
+      position: absolute;
+      top: 4px;
+      left: 0;
+      clip-path: polygon(0% 0%, 50% 100%, 100% 0%);
+      opacity: 0;
+
+      animation: appears 1s infinite;
+    }
+
+    &:after {
+      content: "";
+      width: 50px;
+      height: 32.5px;
+      background-color: white;
+      position: absolute;
+      bottom: 4px;
+      left: 0;
+      clip-path: polygon(0% 100%, 50% 0%, 100% 100%);
+      opacity: 0;
+
+      animation: appears 1s 0.5s infinite;
+    }
+
+    @keyframes appears {
+      0% {
+        opacity: 0;
+      }
+      75% {
+        background-color: rgb(255, 0, 0);
+      }
+      100% {
+        opacity: 0.3;
+        background-color: rgb(255, 255, 255);
+      }
+    }
+  }
+
+  .dot {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 10px;
+    background-color: white;
+    top: 0;
+    left: 0;
+
+    animation: ampulheta 2.5s infinite;
+  }
+
+  @keyframes ampulheta {
+    0% {
+      left: 0;
+      top: 0;
+    }
+    25% {
+      top: 0;
+      left: 45px;
+    }
+    50% {
+      left: 0px;
+      top: 70px;
+    }
+    75% {
+      left: 45px;
+      top: 70px;
+    }
+    100% {
+      left: 0px;
+      top: 0px;
+    }
+  }
+}
